--- a/.terraform-docs.yml
+++ b/.terraform-docs.yml
@@ -6,9 +6,9 @@ content: |-
   [![License: GPL v3](https://img.shields.io/badge/License-GPLv3-blue.svg)](https://www.gnu.org/licenses/gpl-3.0)
   [![Developed by: Cisco](https://img.shields.io/badge/Developed%20by-Cisco-blue)](https://developer.cisco.com)
 
-  # Terraform ACI - System Settings Module
+  # Terraform ACI - Virtual Networking Module
 
-  A Terraform module to configure ACI System Settings.
+  A Terraform module to configure ACI Virtual Networking.
 
   This module is part of the Cisco [*Intersight as Code*](https://cisco.com/go/intersightascode) project. Its goal is to allow users to instantiate network fabrics in minutes using an easy to use, opinionated data model. It takes away the complexity of having to deal with references, dependencies or loops. By completely separating data (defining variables) from logic (infrastructure declaration), it allows the user to focus on describing the intended configuration while using a set of maintained and tested Terraform Modules without the need to understand the low-level Intersight object model.
 
